--- a/sites/experiencia.html
+++ b/sites/experiencia.html
@@ -38,7 +38,7 @@
     <section>
       <h2>Experiencia</h2>
       <h3>Video de Experiencia</h3>
-      <video src="../videos/Video_Edit.mp4" controls width="300px" height="200px" poster="../images/Poster.jpg">
+      <video src="../videos/Video_Edit2.mp4" controls width="300px" height="200px" poster="../images/Poster.jpg">
       </video>
       <h3>Audio de Hobies</h3>
       <audio src="../audio/Audio_NextU.m4a" controls autoplay">Formato no soportado en Navegador
